terminada primer trimestre

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_listado_acontecimientos">ListadoAcontecimientosActivity</string>
     <string name="title_activity_about_us">AboutUS</string>
     <string name="title_activity_annadir_acontecimiento">AnnadirAcontecimientoActivity</string>
+    <string name="title_activity_ver_acontecimiento">VerAcontecimientoActivity</string>
 </resources>
