--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="title_activity_about_us">AboutUS</string>
     <string name="title_activity_annadir_acontecimiento">AnnadirAcontecimientoActivity</string>
     <string name="title_activity_ver_acontecimiento">VerAcontecimientoActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
