--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="title_activity_listado_acontecimientos">ListadoAcontecimientosActivity</string>
+    <string name="title_activity_listado_acontecimientos">ListOcurrencesActivity</string>
     <string name="title_activity_about_us">AboutUS</string>
-    <string name="title_activity_annadir_acontecimiento">AnnadirAcontecimientoActivity</string>
-    <string name="title_activity_ver_acontecimiento">VerAcontecimientoActivity</string>
+    <string name="title_activity_annadir_acontecimiento">AddOcurrencesActivity</string>
+    <string name="title_activity_ver_acontecimiento">SeeOcurrencesActivity</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -83,4 +83,8 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="SelectLanguage">Select Language</string>
+    <string name="EditLanguage">Edit Language</string>
+    <string name="ListOcurrences">List Ocurrences</string>
+    <string name="Search">Search</string>
 </resources>
